# spoolman2slicer

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: bandit.yml  build-container.yml  publish-pypi.yml  pylint.yml  reuse.yaml  tests.yml
spoolman2slicer/: constants.py  create_template_files.py  plugins.py  spoolman2slicer.py  utils.py
spoolman2slicer/data/templates-crealityprint/: default.info.template
spoolman2slicer/data/templates-orcaslicer/: default.info.template
src/spoolman2slicer/: engine.py  plugins.py  renderer.py  spoolman2slicer.py  utils.py
src/spoolman2slicer/data/templates-crealityprint/: ABS.json.template  ASA.json.template  PETG.json.template  PLA.json.template  TPU.json.template  default.json.template  filename.template
src/spoolman2slicer/spoolman_common/: api.py  constants.py  utils.py
tests/: conftest.py  test_api.py  test_cli.py  test_create_template_files.py  test_engine.py  test_renderer.py  test_spoolman2slicer.py  test_update_mode_and_caching.py
tests/mocks/: filaments.json  moonraker.json  spools.json
